parser/tests/bad/for01-1.st
% range of a 'for' statement must have type 'int'
%   increasing, no id, begin

for : 1.0..3
  % empty
end for
